fixed landing page home nav spacing

--- a/oleo/static/css/landingpage.css
+++ b/oleo/static/css/landingpage.css
@@ -84,7 +84,7 @@ a {
 }
 
 .nav-link.dropdown-toggle.light {
-  padding-right: 40px;
+  padding-right: 20px;
 }
 
 .nav-link.dropdown-toggle.thin-light {
